--- a/SportCenter.csproj
+++ b/SportCenter.csproj
@@ -93,15 +93,6 @@
     <Compile Include="Basketball_Field_Bill.xaml.cs">
       <DependentUpon>Basketball_Field_Bill.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SoccerField.xaml.cs">
-      <DependentUpon>SoccerField.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Volleyball_Court_Bill.xaml.cs">
-      <DependentUpon>Volleyball_Court_Bill.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Good.xaml.cs">
-      <DependentUpon>Good.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Model\account.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -114,6 +105,7 @@
     <Compile Include="Model\buyingInfo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\DataProvider.cs" />
     <Compile Include="Model\field.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -141,8 +133,24 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Model\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\sp_helpdiagrams_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SoccerField.xaml.cs">
+      <DependentUpon>SoccerField.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="Volleyball_Court_Bill.xaml.cs">
+      <DependentUpon>Volleyball_Court_Bill.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Good.xaml.cs">
+      <DependentUpon>Good.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControlKteam\ControlBarUC.xaml.cs">
       <DependentUpon>ControlBarUC.xaml</DependentUpon>
@@ -256,19 +264,21 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Image\a5ff21dc78b136b321e4e7a6e0f161aa.jpg_684x684q90.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Model\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
       <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </Content>
     <Content Include="Model\Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.4.2.1\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.4.2.1\build\MaterialDesignThemes.targets')" />
