--- a/SportCenter.csproj
+++ b/SportCenter.csproj
@@ -78,11 +78,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Add_Field.xaml.cs">
+      <DependentUpon>Add_Field.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Add_Good.xaml.cs">
       <DependentUpon>Add_Good.xaml</DependentUpon>
     </Compile>
     <Compile Include="BasketballField.xaml.cs">
       <DependentUpon>BasketballField.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Basketball_Field_Bill.xaml.cs">
+      <DependentUpon>Basketball_Field_Bill.xaml</DependentUpon>
     </Compile>
     <Compile Include="Bill.xaml.cs">
       <DependentUpon>Bill.xaml</DependentUpon>
@@ -92,9 +98,6 @@
     </Compile>
     <Compile Include="Football_Field_Bill.xaml.cs">
       <DependentUpon>Football_Field_Bill.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Basketball_Field_Bill.xaml.cs">
-      <DependentUpon>Basketball_Field_Bill.xaml</DependentUpon>
     </Compile>
     <Compile Include="List_Good.xaml.cs">
       <DependentUpon>List_Good.xaml</DependentUpon>
@@ -139,9 +142,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Model\sysdiagram.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="SoccerField.xaml.cs">
       <DependentUpon>SoccerField.xaml</DependentUpon>
     </Compile>
@@ -158,6 +158,10 @@
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\ControlBarViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Page Include="Add_Field.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Add_Good.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -166,15 +170,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Basketball_Field_Bill.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Bill.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ChooseSport.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Basketball_Field_Bill.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
