--- a/SportCenter.csproj
+++ b/SportCenter.csproj
@@ -148,7 +148,7 @@
     <Compile Include="Model\sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\TonKho.cs" />
+    <Compile Include="ViewModel\StorageViewModel.cs" />
     <Compile Include="PayMent_tem.xaml.cs">
       <DependentUpon>PayMent_tem.xaml</DependentUpon>
     </Compile>
