--- a/SportCenter.csproj
+++ b/SportCenter.csproj
@@ -127,9 +127,6 @@
     <Compile Include="Model\good.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\image.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Model\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -145,12 +142,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Model\sysdiagram.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="PaymentTemplate.xaml.cs">
-      <DependentUpon>PaymentTemplate.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="ViewModel\BillViewModel_football.cs" />
+    <Compile Include="ViewModel\BaseBill.cs" />
     <Compile Include="PayMent_tem.xaml.cs">
       <DependentUpon>PayMent_tem.xaml</DependentUpon>
     </Compile>
@@ -209,10 +202,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="List_Good.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="PaymentTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -318,6 +307,8 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="a5ff21dc78b136b321e4e7a6e0f161aa.jpg_684x684q90.jpg" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Model\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
