--- a/SportCenter.csproj
+++ b/SportCenter.csproj
@@ -142,9 +142,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Model\sysdiagram.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
+    <Compile Include="ViewModel\BaseFieldBasketball.cs" />
+    <Compile Include="ViewModel\BaseFieldSoccer.cs" />
+    <Compile Include="ViewModel\BaseFieldVolleyball.cs" />
+    <Compile Include="ViewModel\BasketballFieldViewModel.cs" />
+    <Compile Include="ViewModel\SoccerFieldViewModel.cs" />
     <Compile Include="ViewModel\StorageViewModel.cs" />
     <Compile Include="PayMent_tem.xaml.cs">
       <DependentUpon>PayMent_tem.xaml</DependentUpon>
@@ -159,6 +161,7 @@
     <Compile Include="ViewModel\ListBillViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\PaymentTemplateViewModel.cs" />
+    <Compile Include="ViewModel\VolleyballFieldViewModel.cs" />
     <Compile Include="VolleyballField.xaml.cs">
       <DependentUpon>VolleyballField.xaml</DependentUpon>
     </Compile>
