--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
-#Ignore Model 
-Model/
-DataProvider.cs
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -212,3 +210,5 @@ Services/SFS/1-Presentation/WTO.SFS.SPA/_dist/*
 out/
 # Others
 .DS_Store
+DataProvider.cs
+Model1.edmx
