--- a/SportCenter.csproj
+++ b/SportCenter.csproj
@@ -142,6 +142,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="ProductDetailsControl.xaml.cs">
+      <DependentUpon>ProductDetailsControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SellGoodsControl.xaml.cs">
+      <DependentUpon>SellGoodsControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControlKteam\Expander_Bill.xaml.cs">
       <DependentUpon>Expander_Bill.xaml</DependentUpon>
     </Compile>
@@ -217,6 +223,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="PayMent_tem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ProductDetailsControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SellGoodsControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
