Fix_CustomerInfo_Table

--- a/SportCenter.csproj
+++ b/SportCenter.csproj
@@ -394,6 +394,8 @@
   <ItemGroup>
     <Resource Include="Image\bg.jpg" />
     <Resource Include="Image\bg1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Model\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
